# pokedex

./: .env.sample  .gitignore  .pre-commit-config.yaml  DOCS.md  Dockerfile  Dockerfile.dev  Makefile  PROD.md  README.md  build-and-copy.sh  docker-compose.yml  pom.xml  pyproject.toml
.github/workflows/: ci.yml
loadtest/: README.md  pokedex.k6.js
src/: settings.py
src/domains/: __init__.py
src/entrypoints/rest/: __init__.py  server.py
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
src/main/resources/: application.properties
src/pokedex/: __init__.py  settings.py
src/pokedex/domains/pokemon/: __init__.py  exceptions.py  model.py  ports.py  service.py  translation_strategy.py
src/pokedex/entrypoints/: __init__.py
src/pokedex/entrypoints/rest/: server.py
src/pokedex/entrypoints/rest/middleware/: __init__.py  exception_handler.py  observability.py
src/pokedex/entrypoints/rest/routes/: __init__.py  pokemon.py
src/pokedex/entrypoints/rest/schemas/: __init__.py  pokemon.py  shared.py
src/pokedex/infrastructure/: __init__.py
src/pokedex/infrastructure/cache/: decorators.py  keyed_locks.py  keys.py  memory_cache.py  state.py
src/pokedex/infrastructure/http/: __init__.py  base_http_client_adapter.py  http_client.py
src/pokedex/infrastructure/http/clients/: __init__.py
src/pokedex/infrastructure/http/clients/funtranslations/: __init__.py  client.py  schemas.py
src/pokedex/infrastructure/http/clients/pokeapi/: __init__.py  client.py  converters.py  schemas.py
src/pokedex/infrastructure/observability/: sentry.py
src/pokedex/infrastructure/resilience/: __init__.py  retry.py
src/pokedex/shared/: __init__.py  exceptions.py
src/test/java/com/federicogualdi/pokemon/: PokedexResourceTest.java
src/test/java/com/federicogualdi/pokemon/rest/: PokedexRestTest.java
src/test/java/com/federicogualdi/pokemon/services/: PokedexServicesRest.java  (+2 more)
src/test/resources/: application.properties
src/test/resources/funtranslations/: shakespeare.mewtwo-description.json  shakespeare.pikachu-description.json  yoda.mewtwo-description.json  yoda.pikachu-description.json
src/test/resources/pokeapi/: pikachu.json
src/test/resources/translatorservice/: mewtwo.yoda.json  pikachu.shakespeare.json
tests/: conftest.py  test_smoke.py  utils.py
tests/data/: __init__.py  funtranslations_data_generators.py  pokeapi_data_generators.py
tests/integration/entrypoints/rest/: __init__.py  data_generators.py  data_generators_translation.py  test_pokemon_endpoint.py  test_pokemon_translated_endpoint.py  test_pokemon_translated_strategy_endpoint.py  test_translation_cache_integration.py
tests/unit/domains/: __init__.py
tests/unit/domains/pokemon/: __init__.py  test_model.py  test_pokemon_service.py  test_pokemon_service_translation.py  test_pokemon_service_translation_strategy.py  test_translation_strategy_policy.py
tests/unit/infrastructure/: __init__.py  test_funtranslations_client.py  test_funtranslations_strategy_client.py  test_pokeapi_client.py  utils.py
tests/unit/infrastructure/cache/: test_cache_decorators_translation.py
tests/unit/infrastructure/http/: __init__.py  test_funtranslations_client.py  test_funtranslations_strategy_client.py  test_pokeapi_client.py  utils.py
tests/unit/infrastructure/resilience/: __init__.py  test_retry.py
(+49 files in other folders)
